--- a/site01.css
+++ b/site01.css
@@ -156,26 +156,29 @@ hr {
 }
 
 
-.div2h2 {}
+
 
 .div-pai {
-    height: 110vh;
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 20px;
-}
-
-.div-pai02 {
-    height: 110vh;
+   
     width: 80vw;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    gap: 30px;
    
+    
+}
+
+.div-pai02 {
+    
+    width: 80vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 30px;  
+    margin-top: 30px;
 
 
 
@@ -188,6 +191,7 @@ hr {
     justify-content: center;
     align-items: center;
     height: 16vh;
+    
   
 
 
@@ -248,7 +252,7 @@ hr {
     justify-content: space-evenly;
     align-items: center;
     margin-top: 50px;
-    margin-right: 190px;
+   
 
 }
 
@@ -392,7 +396,7 @@ footer img {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-left: 250px;
+    margin-left: 70px;
     width: 400px;
    
 
